Upgrade Bootstrap to 3.3.4. Align dropdown menu in xs. Fix #43

--- a/rdiffweb/static/less/bootstrap/navs.less
+++ b/rdiffweb/static/less/bootstrap/navs.less
@@ -36,7 +36,7 @@
         color: @nav-disabled-link-hover-color;
         text-decoration: none;
         background-color: transparent;
-        cursor: not-allowed;
+        cursor: @cursor-disabled;
       }
     }
   }
@@ -191,7 +191,7 @@
   border-bottom: 0;
 
   > li > a {
-    // Override margin from nav-tabs
+    // Override margin from .nav-tabs
     margin-right: 0;
     border-radius: @border-radius-base;
   }
@@ -223,11 +223,9 @@
 .tab-content {
   > .tab-pane {
     display: none;
-    visibility: hidden;
   }
   > .active {
     display: block;
-    visibility: visible;
   }
 }
 
