--- a/rdiffweb/static/less/bootstrap/type.less
+++ b/rdiffweb/static/less/bootstrap/type.less
@@ -208,7 +208,7 @@ dd {
 
 .dl-horizontal {
   dd {
-    &:extend(.clearfix(all));
+    &:extend(.clearfix all); // Clear the floated `dt` if an empty `dd` is present
   }
 
   @media (min-width: @grid-float-breakpoint) {
@@ -238,7 +238,7 @@ abbr[data-original-title] {
 }
 .initialism {
   font-size: 90%;
-  text-transform: uppercase;
+  .text-uppercase();
 }
 
 // Blockquotes
